data: cron update

--- a/data/sources/pragueaws.yaml
+++ b/data/sources/pragueaws.yaml
@@ -7210,15 +7210,9 @@ series:
         dtstart: 2019-09-17 18:00:00+02:00
         dtend: 2019-09-17 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 20, 6:00 PM  CEST: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
-
-
-        There will be two speakers with the following presentations:
-
-
-        • Building event-drive'
-      og_title: Regular Prague AWS User Group Meetup, Wed, Oct 20, 2021, 6:00 PM   | Meetup
-      url: https://www.meetup.com/prague-aws-meetup/events/280751506/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Regular Prague AWS User Group Meetup
         description: 'Prague AWS User Group
@@ -7240,12 +7234,9 @@ series:
         dtstart: 2021-10-20 18:00:00+02:00
         dtend: 2021-10-20 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jan 13, 6:00 PM  CET: We would like to invite you for the first online AWS CZSK User Group Meetup organized together with Amazon and AWS User Group Slovakia.
-
-
-        Due to the fact that we can not mee'
-      og_title: AWS CZSK User Group Virtual Meetup, Wed, Jan 13, 2021, 6:00 PM   | Meetup
-      url: https://www.meetup.com/prague-aws-meetup/events/275297097/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: AWS CZSK User Group Virtual Meetup
         description: 'Prague AWS User Group
@@ -7267,15 +7258,9 @@ series:
         dtstart: 2021-01-13 18:00:00+01:00
         dtend: 2021-01-13 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Dec 11, 6:00 PM  CET: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
-
-
-        There will be two speakers with the following presentations:
-
-
-        • Experience with migr'
-      og_title: Regular Prague AWS User Group Meetup, Wed, Dec 11, 2019, 6:00 PM   | Meetup
-      url: https://www.meetup.com/prague-aws-meetup/events/266233892/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Regular Prague AWS User Group Meetup
         description: 'Prague AWS User Group
@@ -7297,15 +7282,9 @@ series:
         dtstart: 2019-12-11 18:00:00+01:00
         dtend: 2019-12-11 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Sep 17, 6:00 PM  CEST: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
-
-
-        There will be two speakers with the following presentations:
-
-
-        • How to migrate a lar'
-      og_title: Regular Prague AWS User Group Meetup, Tue, Sep 17, 2019, 6:00 PM   | Meetup
-      url: https://www.meetup.com/prague-aws-meetup/events/264129445/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Regular Prague AWS User Group Meetup
         description: 'Prague AWS User Group
