data: cron update

--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -2281,14 +2281,14 @@ series:
         dtstart: 2022-06-21 18:30:00+02:00
         dtend: 2022-06-21 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jul 5, 6:30 PM  CEST: Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bodies of data on the web'
-      og_title: Comparing Semantic Web Technologies to TypeDB, Tue, Jul 5, 2022, 6:30 PM   | Meetup
+      meta_description: 'Tue, Jul 12, 6:30 PM  CEST: Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bodies of data on the web'
+      og_title: Comparing Semantic Web Technologies to TypeDB, Tue, Jul 12, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/typedb-prague/events/286749064/
       ical:
         summary: Comparing Semantic Web Technologies to TypeDB
         description: 'TypeDB Prague Engineers
 
-          Tuesday, July 5 at 6:30 PM
+          Tuesday, July 12 at 6:30 PM
 
 
           Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bod...
@@ -2302,8 +2302,8 @@ series:
         status: CONFIRMED
         uid: event_286749064@meetup.com
         url: https://www.meetup.com/typedb-prague/events/286749064/
-        dtstart: 2022-07-05 18:30:00+02:00
-        dtend: 2022-07-05 19:30:00+02:00
+        dtstart: 2022-07-12 18:30:00+02:00
+        dtend: 2022-07-12 19:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
@@ -2808,6 +2808,30 @@ series:
         url: https://www.meetup.com/typedb-prague/events/286133573/
         dtstart: 2022-06-28 18:30:00+02:00
         dtend: 2022-06-28 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Beyond SQL | Comparing SQL to TypeQL
+        description: 'TypeDB Prague Engineers
+
+          Thursday, June 30 at 6:30 PM
+
+
+          Using SQL to query relational databases is easy. As a declarative language\, it’s straightforward to write queries and build powerful applications. How...
+
+
+          https://www.meetup.com/typedb-prague/events/286115362/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286115362@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286115362/
+        dtstart: 2022-06-30 18:30:00+02:00
+        dtend: 2022-06-30 19:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
