--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -1400,21 +1400,9 @@ series:
         dtstart: 2022-04-26 18:30:00+02:00
         dtend: 2022-04-26 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jul 5, 6:30 PM  CEST: • How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-        '
-      og_title: GDG Garage Prague One, Tue, Jul 5, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gdgprague/events/xqcsqsydckbhb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -13435,3 +13423,39 @@ series:
         url: https://www.meetup.com/gdgprague/events/xqcsqsydclbvb/
         dtstart: 2022-08-16 18:30:00+02:00
         dtend: 2022-08-16 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Aug 30, 6:30 PM  CEST: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One, Tue, Aug 30, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydclbnc/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, August 30 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/xqcsqsydclbnc/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydclbnc@meetup.com
+        url: https://www.meetup.com/gdgprague/events/xqcsqsydclbnc/
+        dtstart: 2022-08-30 18:30:00+02:00
+        dtend: 2022-08-30 20:30:00+02:00
