--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -8119,3 +8119,24 @@ series:
         url: https://www.meetup.com/praguerb/events/285867201/
         dtstart: 2022-06-01 19:00:00+02:00
         dtend: 2022-06-01 22:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Nov 2, 7:00 PM  CET: '
+      og_title: First Wednesday Of The Month - Ruby, Wed, Nov 2, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/praguerb/events/dkmktfydcpbdb/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, November 2 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/dkmktfydcpbdb/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfydcpbdb@meetup.com
+        url: https://www.meetup.com/praguerb/events/dkmktfydcpbdb/
+        dtstart: 2022-11-02 19:00:00+01:00
+        dtend: 2022-11-02 22:00:00+01:00
