--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -4636,9 +4636,9 @@ series:
         dtstart: 2022-05-10 18:00:00+02:00
         dtend: 2022-05-10 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 28, 8:30 AM  CEST: The PyData Global Online Conference is where users, contributors, and newcomers can share experiences to learn from one another and grow together. PyData provides a virtual'
-      og_title: PyData Global 2021 (GLOBAL ONLINE CONFERENCE), Thu, Oct 28, 2021, 8:30 AM   | Meetup
-      url: https://www.meetup.com/pydata-prague/events/281281117/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: PyData Global 2021 (GLOBAL ONLINE CONFERENCE)
         description: 'PyData Prague
@@ -4649,23 +4649,20 @@ series:
           The PyData Global Online Conference is where users, contributors, and newcomers can share experiences to learn from one another and grow together. PyD...
 
 
-          https://www.meetup.com/PyData-Prague/events/281281117/'
+          https://www.meetup.com/pydata-prague/events/281281117/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_281281117@meetup.com
-        url: https://www.meetup.com/PyData-Prague/events/281281117/
+        url: https://www.meetup.com/pydata-prague/events/281281117/
         dtstart: 2021-10-28 08:30:00+02:00
         dtend: 2021-10-31 00:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jul 13, 6:30 PM  CEST: Hello PyData lovers,
-
-
-        it''s been a while since our last (on-line, not to mention in-person) PyData meet-up. We are sorry for not having arranged anything in the lockdown per'
-      og_title: 'PyData Prague #9 - Reinforcement Yearning, Tue, Jul 13, 2021, 6:30 PM   | Meetup'
-      url: https://www.meetup.com/pydata-prague/events/279339785/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'PyData Prague #9 - Reinforcement Yearning'
         description: 'PyData Prague
@@ -4675,14 +4672,14 @@ series:
 
           Hello PyData lovers, it''s been a while since our last (on-line, not to mention in-person) PyData meet-up. We are sorry for not having arranged anythin...
 
-          \nhttps://www.meetup.com/PyData-Prague/events/279339785/'
+          \nhttps://www.meetup.com/pydata-prague/events/279339785/'
         location: Holešovická šachta (Bubenská 242/14, Praha 7-Holešovice, Czech Republic 170 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_279339785@meetup.com
-        url: https://www.meetup.com/PyData-Prague/events/279339785/
+        url: https://www.meetup.com/pydata-prague/events/279339785/
         dtstart: 2021-07-13 18:30:00+02:00
         dtend: 2021-07-13 21:30:00+02:00
   - meetupcom:
@@ -6863,6 +6860,54 @@ series:
         url: https://www.meetup.com/pydata-prague/events/286566742/
         dtstart: 2022-06-27 18:00:00+02:00
         dtend: 2022-06-27 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'PyData Prague #11 - Hovering over Capulets'
+        description: 'PyData Prague
+
+          Monday, June 27 at 6:00 PM
+
+
+          Hello data-lovers and Python craft-masters! Another PyData Prague meetup is here and this time we will meet in **(https://goo.gl/maps/FHvjbwTtYULjTKvS...
+
+
+          https://www.meetup.com/pydata-prague/events/286566742/'
+        location: Ataccama Software, s.r.o. (Invalidovna, Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286566742@meetup.com
+        url: https://www.meetup.com/pydata-prague/events/286566742/
+        dtstart: 2022-06-27 18:00:00+02:00
+        dtend: 2022-06-27 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'PyData Prague #10 - Pandemic Lite'
+        description: 'PyData Prague
+
+          Tuesday, May 10 at 6:00 PM
+
+
+          Hello data-devourers and Python conjurers! We haven''t had a proper in-person meeting with talks for ages but now we are back with a perfect venue (Cre...
+
+
+          https://www.meetup.com/pydata-prague/events/285562340/'
+        location: CreativeDock (Františka Křížka 490/4, Holešovice, Praha-Praha 7, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285562340@meetup.com
+        url: https://www.meetup.com/pydata-prague/events/285562340/
+        dtstart: 2022-05-10 18:00:00+02:00
+        dtend: 2022-05-10 21:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
