--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -8409,18 +8409,16 @@ series:
         dtstart: 2022-05-18 19:00:00+02:00
         dtend: 2022-05-18 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jun 15, 7:00 PM  CEST: **Potkáme se v Holešovické šachtě. Bude jedna přednáška, lightning talky a volná zábava - buřty jsou objednané.**
-
-        **We meet at the Holešovická šachta. You can look forward '
-      og_title: Pyvo Prague 133, Wed, Jun 15, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcjbtb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
-        summary: Pyvo Prague 133
+        summary: 'Pyvo Prague #133 Using OpenCV in Python to process videos and read barcodes'
         description: 'Pyvo: Prague Python Meetup
 
           Wednesday, June 15 at 7:00 PM
 
-          \n**Potkáme se v Holešovické šachtě. Bude jedna přednáška, lightning talky a volná zábava - buřty jsou objednané.****We meet at the Holešovická šachta. ...
+          \nPotkáme se v Holešovické šachtě. Bude jedna přednáška, lightning talky a volná zábava - buřty jsou objednané.  We meet at the Holešovická šachta. You ...
 
 
           https://www.meetup.com/pyvo-prague-python-meetup/events/285151921/'
