--- a/data/sources/protest-cz.yaml
+++ b/data/sources/protest-cz.yaml
@@ -7913,3 +7913,98 @@ series:
         url: https://www.meetup.com/protest_cz/events/283227886/
         dtstart: 2022-01-25 18:00:00+01:00
         dtend: 2022-01-25 19:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 108. [pro:]TEST! meetup - Test automatizace v Playwright
+        description: '[pro:]TEST!
+
+          Tuesday, June 21 at 6:00 PM
+
+
+          **Anotace přednášky** Playwright je moderní knihovna pro automatizaci moderních prohlížečů. Nabízí vše, co by si mohl automatizér přát a ještě mnohem ...
+
+
+          https://www.meetup.com/protest_cz/events/286604262/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286604262@meetup.com
+        url: https://www.meetup.com/protest_cz/events/286604262/
+        dtstart: 2022-06-21 18:00:00+02:00
+        dtend: 2022-06-21 19:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 107. [pro:]TEST! meetup - Zachraňte životy! Kooperativní hra.
+        description: '[pro:]TEST!
+
+          Tuesday, March 29 at 6:00 PM
+
+
+          Chcete si vyzkoušet, jak jako team umíte komunikovat a spolupracovat při řešení krizové situace? Přijďte si vyzkoušet simulaci **Raven13**.**Co vás če...
+
+
+          https://www.meetup.com/protest_cz/events/284821963/'
+        location: Na Florenci 2116/15 (Na Florenci 2116/15, Florenc, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284821963@meetup.com
+        url: https://www.meetup.com/protest_cz/events/284821963/
+        dtstart: 2022-03-29 18:00:00+02:00
+        dtend: 2022-03-29 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 106. [pro:]TEST! Jak se hledá tester
+        description: '[pro:]TEST!
+
+          Tuesday, March 1 at 6:00 PM
+
+
+          **Anotace přednášky:** Jak se hledá tester? Jak se hledá dobrý tester? To je téma dalšího panelové diskuse na TEST!u. Online se setkáme s následujícím...
+
+
+          https://www.meetup.com/protest_cz/events/284148042/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284148042@meetup.com
+        url: https://www.meetup.com/protest_cz/events/284148042/
+        dtstart: 2022-03-01 18:00:00+01:00
+        dtend: 2022-03-01 19:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 105. [pro:]TEST! – Libor Šimo o teorii omezení
+        description: '[pro:]TEST!
+
+          Tuesday, January 25 at 6:00 PM
+
+
+          Jednou možná přijde čas, kdy se i vaše QA oddělení stane úzkým hrdlem vývoje.A jak z toho následně ven, obzvlášť v době, kdy najít dobrého testera na ...\n
+
+          https://www.meetup.com/protest_cz/events/283227886/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283227886@meetup.com
+        url: https://www.meetup.com/protest_cz/events/283227886/
+        dtstart: 2022-01-25 18:00:00+01:00
+        dtend: 2022-01-25 19:00:00+01:00
