--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -2282,10 +2282,10 @@ series:
         dtend: 2022-06-21 19:30:00+02:00
   - meetupcom:
       meta_description: 'Tue, Jul 12, 6:30 PM  CEST: Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bodies of data on the web'
-      og_title: Comparing Semantic Web Technologies to TypeDB, Tue, Jul 12, 2022, 6:30 PM   | Meetup
+      og_title: Semantic Web Technologies vs TypeDB, Tue, Jul 12, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/typedb-prague/events/286749064/
       ical:
-        summary: Comparing Semantic Web Technologies to TypeDB
+        summary: Semantic Web Technologies vs TypeDB
         description: 'TypeDB Prague Engineers
 
           Tuesday, July 12 at 6:30 PM
@@ -2808,6 +2808,30 @@ series:
         url: https://www.meetup.com/typedb-prague/events/286133573/
         dtstart: 2022-06-28 18:30:00+02:00
         dtend: 2022-06-28 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Beyond SQL | Comparing SQL to TypeQL
+        description: 'TypeDB Prague Engineers
+
+          Thursday, June 30 at 6:30 PM
+
+
+          Using SQL to query relational databases is easy. As a declarative language\, it’s straightforward to write queries and build powerful applications. How...
+
+
+          https://www.meetup.com/typedb-prague/events/286115362/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286115362@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286115362/
+        dtstart: 2022-06-30 18:30:00+02:00
+        dtend: 2022-06-30 19:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
