data: cron update

--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -2281,9 +2281,9 @@ series:
         dtstart: 2022-06-21 18:30:00+02:00
         dtend: 2022-06-21 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jul 12, 6:30 PM  CEST: Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bodies of data on the web'
-      og_title: Semantic Web Technologies vs TypeDB, Tue, Jul 12, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/286749064/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Semantic Web Technologies vs TypeDB
         description: 'TypeDB Prague Engineers
