--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -146,26 +146,29 @@ series:
         dtstart: 2022-02-16 19:00:00+01:00
         dtend: 2022-02-16 23:59:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jul 20, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
-      og_title: 'Pyvo Prague #, Wed, Jul 20, 2022, 7:00 PM   | Meetup'
+      meta_description: 'Wed, Jul 20, 7:00 PM  CEST: Máme léto a s ním tradičně odlehčený program. Vyzkoušíme, jak by se nám fungovalo v kavárně volnočasového centra H55 (https://www.h55.cz/).
+
+
+        K dispozici budeme mít i sál s '
+      og_title: Pyvo Prague 134 - summer barbecue edition, Wed, Jul 20, 2022, 7:00 PM   | Meetup
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydckbbc/
       ical:
-        summary: 'Pyvo Prague #'
+        summary: Pyvo Prague 134 - summer barbecue edition
         description: 'Pyvo: Prague Python Meetup
 
           Wednesday, July 20 at 7:00 PM
 
-          \nWe will meet for an informal chat about Python, programming, and more. Details will be added.
+          \nMáme léto a s ním tradičně odlehčený program. Vyzkoušíme, jak by se nám fungovalo v kavárně volnočasového centra H55 (https://www.h55.cz/).  K dispozi...
 
 
-          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydckbbc/'
-        location: Prague (, Prague, Czech Republic)
+          https://www.meetup.com/pyvo-prague-python-meetup/events/287180648/'
+        location: Volnočasové centrum H55 (Hloubětínská 1138/5, Praha-Praha 14, Czech Republic 198 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_bcxlssydckbbc@meetup.com
-        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydckbbc/
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/287180648/
         dtstart: 2022-07-20 19:00:00+02:00
         dtend: 2022-07-20 23:59:00+02:00
   - meetupcom:
@@ -8792,6 +8795,29 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/
         dtstart: 2022-10-19 19:00:00+02:00
         dtend: 2022-10-19 23:59:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #133 Using OpenCV in Python to process videos and read barcodes'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, June 15 at 7:00 PM
+
+          \nPotkáme se v Holešovické šachtě. Bude jedna přednáška, lightning talky a volná zábava - buřty jsou objednané.  We meet at the Holešovická šachta. You ...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/285151921/'
+        location: Holešovická šachta (Bubenská 242/14, Praha 7-Holešovice, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcjbtb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/285151921/
+        dtstart: 2022-06-15 19:00:00+02:00
+        dtend: 2022-06-15 23:59:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
