--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -10413,3 +10413,123 @@ series:
         url: https://www.meetup.com/czskppug/events/283764636/
         dtstart: 2022-03-24 17:00:00+01:00
         dtend: 2022-03-24 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Aug 11, 5:00 PM  CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: CZSK PPUG Meetup, Thu, Aug 11, 2022, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/287184968/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, August 11 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/287184968/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287184968@meetup.com
+        url: https://www.meetup.com/czskppug/events/287184968/
+        dtstart: 2022-08-11 17:00:00+02:00
+        dtend: 2022-08-11 19:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Sep 8, 5:00 PM  CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: CZSK PPUG Meetup, Thu, Sep 8, 2022, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/287184978/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, September 8 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/287184978/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287184978@meetup.com
+        url: https://www.meetup.com/czskppug/events/287184978/
+        dtstart: 2022-09-08 17:00:00+02:00
+        dtend: 2022-09-08 19:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Oct 13, 5:00 PM  CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: CZSK PPUG Meetup, Thu, Oct 13, 2022, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/287184984/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, October 13 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/287184984/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287184984@meetup.com
+        url: https://www.meetup.com/czskppug/events/287184984/
+        dtstart: 2022-10-13 17:00:00+02:00
+        dtend: 2022-10-13 19:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Nov 10, 5:00 PM  CET: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: CZSK PPUG Meetup, Thu, Nov 10, 2022, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/287184990/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, November 10 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/287184990/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287184990@meetup.com
+        url: https://www.meetup.com/czskppug/events/287184990/
+        dtstart: 2022-11-10 17:00:00+01:00
+        dtend: 2022-11-10 19:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, July 14 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/287183851/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287183851@meetup.com
+        url: https://www.meetup.com/czskppug/events/287183851/
+        dtstart: 2022-07-14 17:00:00+02:00
+        dtend: 2022-07-14 19:00:00+02:00
