data: cron update

--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -6683,3 +6683,99 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/286390582/
         dtstart: 2022-06-08 18:00:00+02:00
         dtend: 2022-06-08 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Product Design Meet&Greet
+        description: 'Productboard Meetups
+
+          Monday, June 27 at 7:00 PM
+
+
+          Hello, London product design community - let''s meet and get to know each other! With the (https://2022.uxlondon.com/) kicking off soon, some of the Pr...
+
+
+          https://www.meetup.com/productboard-meetups/events/286708983/'
+        location: BrewDog Old Street (211 Old Street, London, United Kingdom EC1V 9NR)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286708983@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286708983/
+        dtstart: 2022-06-27 19:00:00+02:00
+        dtend: 2022-06-27 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Data Meetup | PRG
+        description: 'Productboard Meetups
+
+          Tuesday, June 21 at 6:00 PM
+
+
+          **Productboard''s first Data Meetup is here!** ## About this event During the pandemic, we moved into new offices, which have already been named Best S...
+
+
+          https://www.meetup.com/productboard-meetups/events/286390674/'
+        location: Productboard (Boudníkova 2506/3, Praha 8-Libeň, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286390674@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286390674/
+        dtstart: 2022-06-21 18:00:00+02:00
+        dtend: 2022-06-21 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: GraphQL Meetup
+        description: 'Productboard Meetups
+
+          Wednesday, June 15 at 6:00 PM
+
+
+          **Productboard GraphQL Meetups are back!** **Join us for our next meetup. Please register via Eventbrite:**https://www.eventbrite.com/e/graphql-meetup...
+
+
+          https://www.meetup.com/productboard-meetups/events/286180415/'
+        location: Boudníkova 3 (Boudníkova 3, Praha 8-Palmovka, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286180415@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286180415/
+        dtstart: 2022-06-15 18:00:00+02:00
+        dtend: 2022-06-15 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Backend Meetup | BRNO
+        description: 'Productboard Meetups
+
+          Wednesday, June 8 at 6:00 PM
+
+
+          **Join the first Productboard Backend Meetup in Brno!** **About this event**Join us for our in-person meetup at Impact Hub Brno! We’re excited to host...
+
+
+          https://www.meetup.com/productboard-meetups/events/286390582/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286390582@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286390582/
+        dtstart: 2022-06-08 18:00:00+02:00
+        dtend: 2022-06-08 21:00:00+02:00
